--- a/style.css
+++ b/style.css
@@ -1,81 +1,82 @@
 @charset "UTF-8";
 
-  @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@1&display=swap');
 
-  :root{
+:root {
     --fundo: #082CB4;
-    --titulo:#fdfdfd;
-   
-    --corMenu:rgb(255, 255, 255);
+    --titulo: #fdfdfd;
+
+    --corMenu: rgb(255, 255, 255);
     --corprimaria: white;
-    
-  }
-  
-  
+
+}
 
 
-*{
+
+
+* {
     margin: 0;
     padding: 0;
 }
 
-nav{
+nav {
     background-color: black;
 }
 
-nav li{
+nav li {
     display: inline-block;
 }
 
-nav li a{
+nav li a {
     display: inline-block;
-    color:white;
+    color: white;
     text-decoration: none;
     padding: 15px;
 }
 
-nav li a:hover{
+nav li a:hover {
     background-color: #03588C;
 }
 
-.drop-menu{
+.drop-menu {
     position: absolute;
     box-shadow: 0 0 2px #03588C;
-    display:none
+    display: none
+}
+
+.drop-menu a {
+    display: block;
 
 }
 
-.drop-menu a{
-    display:block;
-
-}
-.drop-principal:hover .drop-menu{
+.drop-principal:hover .drop-menu {
     display: block;
 }
- 
 
 
 
 
 
-body{
-    background-image: url(img/fundo5.jpeg) ;
+
+body {
+    background-image: url(img/);
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: center;
-    
-    
-    
+
+
+
+
 }
 
-.titulo{
+.titulo {
     text-align: center;
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 25px;
-    color:var(--titulo);
+    color: var(--titulo);
     padding-bottom: 10px;
-    background-image: linear-gradient(to right,#0a7abf5d,#0a8cbf5e);
-    
+    background-image: linear-gradient(to right, #0a7abf5d, #0a8cbf5e);
+
 
 }
 
@@ -83,40 +84,36 @@ body{
 
 
 
-.input{
+.input {
     text-align: center;
     color: #03588C;
-    background-color: white;       
-    padding-top: 30px;   
+    background-color: white;
+    padding-top: 30px;
     text-transform: uppercase;
-    border-radius: 1px;    
-    border:2px solid rgb(0, 0, 0);
+    border-radius: 1px;
+    border: 2px solid rgb(0, 0, 0);
     border-width: 2px;
     margin: 20px;
-    padding:  5px 10px;
-   
-    
+    padding: 5px 10px;
+
+
 }
 
-.entrar{
+.entrar {
     margin-top: 10px;
     text-align: center;
-    
+
 }
 
 
 
-.entrar button{
+.entrar button {
     text-align: center;
     color: black;
     background-color: #03588C;
     padding: 5px 8px;
-    border-radius:5px ;
+    border-radius: 5px;
     border: #ffffff;
     cursor: pointer;
     font-size: 15px
-   
-
 }
-
-
